# xode

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
include/: Makefile  Makefile.am  Makefile.in  libcommon.h
lib/: Makefile  Makefile.in
lib/.deps/: compat.Po  display.Po  getopt.Po  getopt1.Po  xmalloc.Po  xstrdup.Po
ode/: INTERNALS  Makefile  Makefile.am  Makefile.in  expr.c  extern.h  global.c  gmon.out  gram.c  gram.h  gram.y  lex.c  lex.l  misc.c  ode  ode.h  stack.c  stack.s  sym.c  tags
ode-examples/: Makefile  Makefile.in
ode/.deps/: am.Po  ama.Po  bessel.Po  eu.Po  expr.Po  float.Po  global.Po  gram.Po  lex.Po  main.Po  misc.Po  prt.Po  rk.Po  rka.Po  specfun.Po  stack.Po  stperr.Po  sym.Po  yywrap.Po
